packages/compiler-rs/tests/snapshots/transform_children__basic.snap
---
source: tests/transform_children.rs
expression: code
---
import { setNodes as _setNodes } from "vue-jsx-vapor";
import { child as _child, template as _template } from "vue";
const t0 = _template("<div> </div>", true);
(() => {
  const n0 = t0();
  const x0 = _child(n0);
  _setNodes(x0, () => foo, " ", () => bar);
  return n0;
})();
