packages/compiler-rs/tests/snapshots/transform_children__fragment.snap
---
source: tests/transform_children.rs
expression: code
---
import { createNodes as _createNodes } from "vue-jsx-vapor";
(() => {
  const n0 = _createNodes(() => foo);
  return n0;
})();
